--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>CityPortal</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CityPortal</name>
-	<description>City portat website</description>
+	<description>City portal website</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -98,6 +98,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.36</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
@@ -110,6 +111,7 @@
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.36</version>
 						</exclude>
 					</excludes>
 				</configuration>
